@@ -1,3 +1,7 @@
+2010-10-19  Charlie Zender  <zender@uci.edu>
+
+	* Merge first half of ncbo.c 4.0.5 into mpncbo.c
+
 2010-10-17  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.0.6 release procedure:
